package edu.utec.pinfraPft.model;

import jakarta.persistence.*;
import lombok.*;

import java.util.List;

@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
@Entity
public class Locality {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    private String name;

    @ManyToOne
    @JoinColumn(name = "department_id")
    private Department department;

    @OneToMany(mappedBy = "locality", cascade = CascadeType.ALL)
    private List<UserEntity> users;

    @OneToMany(mappedBy = "locality", cascade = CascadeType.ALL)
    private List<Itr> itrs;

}
