@startuml

class UserEntity {
    Long id
    String username
    String password
    String firstName
    String secondName
    String firstSurname
    String secondSurname
    int document
    LocalDate birthDate
    String personalEmail
    int phone
    String gender
    String institutionalEmail
    boolean active
    Department department
    Locality locality
    Itr itr
    List<Claim> claims
    List<Role> role
}

class Student extends UserEntity {
    int generation
    List<Certificate> certificates
    List<Justification> justifications
}

class Teacher extends UserEntity {
    String area
    String teacherRole
    List<Event> events
}

class Role {
    Long id
    String name
    List<UserEntity> users
}

class Locality {
    Long id
    String name
    Department department
    List<UserEntity> users
    List<Itr> itrs
}

class Department {
    Long id
    String name
    List<Locality> localities
    List<UserEntity> users
}

class Itr {
    Long id
    String name
    Locality locality
    List<UserEntity> users
    List<Event> events
}

class Claim {
    Long id
    String title
    String description
    LocalDateTime created
    LocalDateTime updated
    String eventVme
    String activityApe
    int semester
    LocalDate date
    String teacher
    int credits
    String status
    UserEntity user
    List<ActionTaken> actionsTaken
}

class ActionTaken {
    Long id
    Claim claim
    UserEntity admin
    String status
    String actionTaken
}

class Event {
    Long id
    String title
    String eventType
    LocalDateTime startingDate
    LocalDateTime endingDate
    String mode
    Itr itr
    String location
    String status
    List<UserEntity> teachers
    List<Attendance> attendances
    List<Constancy> constancies
}

class Attendance {
    Long id
    Event event
    UserEntity student
    String status
    int qualification
}

class Certificate {
    Long id
    String certificateType
    String event
    String information
    LocalDateTime date
    String status
    Student student
}

class Constancy {
    Long id
    String constancyType
    Event event
    String info
    LocalDateTime date
    UserEntity student
    String status
}

class Justification {
    Long id
    String event
    String information
    LocalDateTime date
    String status
    Student student
}

UserEntity --> Department : belongs to
UserEntity --> Locality : belongs to
UserEntity --> Itr : belongs to
UserEntity --> Claim : has many
UserEntity --> Role : has many

Student --> Certificate : has many
Student --> Justification : has many

Teacher --> Event : teaches

Role --> UserEntity : has many

Locality --> Department : belongs to
Locality --> UserEntity : has many
Locality --> Itr : has many

Department --> Locality : has many
Department --> UserEntity : has many

Itr --> Locality : belongs to
Itr --> UserEntity : has many
Itr --> Event : organizes many

Claim --> UserEntity : belongs to
Claim --> ActionTaken : has many

ActionTaken --> Claim : belongs to
ActionTaken --> UserEntity : handled by

Event --> Itr : belongs to
Event --> Attendance : includes many
Event --> Constancy : generates many

Attendance --> Event : belongs to
Attendance --> UserEntity : involves

Certificate --> Student : belongs to

Constancy --> Event : refers to
Constancy --> UserEntity : belongs to

Justification --> Student : belongs to

@enduml
